<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Created by Efendi Hariyadi on 6/18/20 9:16 PM
  ~ Copyright (c) 2020 . All rights reserved.
  ~ Last modified 6/18/20 9:16 PM
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_to_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/updatephone"
            android:icon="@drawable/ic_baseline_mobile_friendly_24"
            android:title="@string/update_profile" />

        <item
            android:id="@+id/logout"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/logout" />

    </group>
</menu>