<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Created by Efendi Hariyadi on 21/07/22, 2:02 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 05/07/22, 11:23 AM
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:srcCompat="@drawable/loginbg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"

                android:text="@string/loginayushman"
                android:textColor="@color/green"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/loginbharat"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:justificationMode="inter_word"
            android:padding="@dimen/_10sdp"
            android:text="@string/login_content"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lvLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"

            android:layout_marginBottom="@dimen/_50sdp"
            android:elevation="@dimen/_3sdp"

            android:fontFamily="@font/poppinsregular"
            android:text="@string/sign_in_with_google"
            android:textColor="?attr/colorOnPrimary"
            app:icon="@drawable/gi"
            app:iconGravity="textStart" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:padding="@dimen/_10sdp"
            android:text="@string/tnc"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"></TextView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>