<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Created by Efendi Hariyadi on 21/07/22, 2:02 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 07/07/22, 10:47 AM
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <LinearLayout
        android:id="@+id/llAddFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/_82sdp"
            android:layout_height="@dimen/_92sdp"
            android:layout_gravity="center"
            android:src="@drawable/thyrocare" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/poppinsmedium"
            android:includeFontPadding="false"
            android:text="@string/book_lab_tests_amp_health_check_ups"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/book_health_check_ups_amp_lab_tests_from_the_comfort_of_your_home_at_best_prices_you_can_make_bookings_for_over_2_000_tests_get_tested_by_120_top_verified_labs_such_as_thyrocare_amp_more"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_11sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/PostNow"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"

            android:layout_marginBottom="@dimen/_50sdp"

            android:elevation="@dimen/_3sdp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/book_your_first_lab_test"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/free_home_sample_collection_amp_access_report_online"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_9sdp" />

        <ImageView
            android:layout_width="@dimen/_52sdp"
            android:layout_height="@dimen/_52sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/refrain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/tncdata"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_9sdp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedRecords"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:scrollbars="none"

             />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/cashback_amp_discounts"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/crdCashBack"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/unicorn_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_170sdp"
                        android:scaleType="fitXY"
                        android:src="@drawable/cashback"></ImageView>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:progressTint="@color/colorAccent"
        android:visibility="gone" />

</RelativeLayout>